# CMake_QT_17_static_Font

./: cmake_create_vs2013.cmd
src/: CMakeLists.txt  force_cmake_rebuild.cmake  main.cpp  mainwindow.cpp
